--- a/OpenGL-Raytracing/OpenGL-Raytracing.vcxproj
+++ b/OpenGL-Raytracing/OpenGL-Raytracing.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="GuiLayer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -155,6 +156,8 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="GuiLayer.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Model.h" />
+    <ClInclude Include="Random.hpp" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Window.h" />
