--- a/OpenGL-Raytracing/OpenGL-Raytracing.vcxproj
+++ b/OpenGL-Raytracing/OpenGL-Raytracing.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Utility.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -161,11 +162,19 @@
     <ClInclude Include="Random.hpp" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="Utility.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\BRDFShaderFrag.glsl" />
+    <None Include="Shaders\BRDFShaderVert.glsl" />
     <None Include="Shaders\Compute.glsl" />
+    <None Include="Shaders\EquirectangularToCubemapFrag.glsl" />
+    <None Include="Shaders\EquirectangularToCubemapVert.glsl" />
     <None Include="Shaders\Frag.glsl" />
+    <None Include="Shaders\IrradianceConvolutionFrag.glsl" />
+    <None Include="Shaders\PrefilterFrag.glsl" />
+    <None Include="Shaders\SkyboxVert.glsl" />
     <None Include="Shaders\Vertex.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
